--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,6 +41,8 @@ exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = ags -c ~/.config/ags/config_overviewOnly.js
 exec-once = hyprm reload -n # Start Hyprland default plugins
 exec-once = /usr/bin/pypr # Start Pyprland for extra plugins
+exec-once = hypridle #Idle Daemon
+# exec-once = hyprshade auto
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
@@ -140,6 +142,8 @@ source = ~/.config/hypr/themes/theme.conf # theme specific settings
 source = ~/.config/hypr/themes/colors.conf # wallbash color override
 source = ~/.config/hypr/monitors.conf # initially empty, to be configured by user and remains static
 source = ~/.config/hypr/userprefs.conf # initially empty, to be configured by user and remains static
+# source = ~/.config/hypr/hypridle.conf
+# source = ~/.config/hypr/hyprlock.conf
 # source = ~/.config/hypr/hyprland/general.conf
 # Note: as userprefs.conf is sourced at the end, settings configured in this file will override the defaults
 # source = ~/.config/hypr/nvidia.conf # auto sourced vars for nvidia
