--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,7 +13,7 @@ $term = kitty
 $editor = code
 $file = dolphin
 $browser = microsoft-edge
-$docker-term = kitty distrobox enter ros-final
+$docker-term = kitty distrobox enter ros-mine
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
