some changes to new load

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,7 +13,7 @@ $term = kitty
 $editor = code
 $file = dolphin
 $browser = microsoft-edge
-$docker-term = kitty distrobox enter ros-mine
+$docker-term = kitty distrobox enter ros-test
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -35,12 +35,12 @@ bind = $mainMod, F, exec, $browser # launch web browser
 bind = Ctrl+Shift, Escape, exec, [centre;size 800 500;float] $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
 
 # Rofi menus
-# bind = $mainMod, A, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
-# bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
+bind = $mainMod, A, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
+bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
 
-bind = $mainMod, Tab, exec, ags -t overview
-bind = $mainMod, a , exec, ags -t overview
-bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
+# bind = $mainMod, Tab, exec, ags -t overview
+# bind = $mainMod, a , exec, ags -t overview
+# bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
 
 # Audio control
 bindl  = , F10, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
