--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -84,16 +84,19 @@ suppress_preload = false
 
 [plugin]
 
-preloaders = [
-	{ name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
-	# Image
-	{ mime = "image/vnd.djvu", run = "noop" },
-	{ mime = "image/*",        run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
-	# PDF
-	{ mime = "application/pdf", run = "pdf" },
+prepend_previewers = [
+  { name = "*.md", run = "glow" },
 ]
+# preloaders = [
+# 	{ name = "*", cond = "!mime", run = "mime", multi = true, prio = "high" },
+# 	# Image
+# 	{ mime = "image/vnd.djvu", run = "noop" },
+# 	{ mime = "image/*",        run = "image" },
+# 	# Video
+# 	{ mime = "video/*", run = "video" },
+# 	# PDF
+# 	{ mime = "application/pdf", run = "pdf" },
+# ]
 previewers = [
 	{ name = "*.md", run = "glow" },
 	{ name = "*/", run = "folder", sync = true },
@@ -193,3 +196,5 @@ sort_reverse   = false
 
 [log]
 enabled = false
+
+
