--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -109,7 +109,7 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
 
 master {
-    new_is_master = true
+    # new_is_master = true
 }
 
 
