added custom nvim config

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -11,8 +11,8 @@ $mainMod = Super # super / meta / windows key
 # Assign apps
 $term = kitty
 $editor = code
-$file = dolphin
-$browser = microsoft-edge
+$file = thunar
+$browser = io.github.zen_browser.zen # zen browser
 $docker-term = kitty distrobox enter ros-test
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
