--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@ $scrPath = $HOME/.local/share/bin # set scripts path
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = ,preferred,auto,1
+monitor = eDP-1,preferred,auto,1
+monitor = HDMI-A-1,1920x1080,auto,1.2
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -28,6 +29,7 @@ exec-once = $scrPath/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
+
 exec-once = $scrPath/polkitkdeauth.sh # authentication dialogue for GUI apps
 exec-once = waybar # launch the system bar
 exec-once = blueman-applet # systray app for Bluetooth
@@ -38,7 +40,7 @@ exec-once = wl-paste --type text --watch cliphist store # clipboard store text d
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
-exec-once = ags -c ~/.config/ags/config_overviewOnly.js
+# exec-once = ags -c ~/.config/ags/config_overviewOnly.
 exec-once = hyprm reload -n # Start Hyprland default plugins
 exec-once = /usr/bin/pypr # Start Pyprland for extra plugins
 exec-once = hypridle #Idle Daemon
@@ -81,11 +83,6 @@ input {
 }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing
-
-device {
-    name = epic mouse V1
-    sensitivity = -0.5
-}
 
 # See https://wiki.hyprland.org/Configuring/Variables/
 
