--- a/.config/hypr/pyprland.toml
+++ b/.config/hypr/pyprland.toml
@@ -38,7 +38,7 @@ margin = 40
 
 [scratchpads.volume]
 animation = "fromRight"
-command = "pavucontrol-qt"
+command = "pavucontrol"
 class = "org.pulseaudio.pavucontrol"
 lazy = true
 size = "40% 90%"
