--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -6,16 +6,16 @@ general {
     gaps_in = 3
     gaps_out = 8
     border_size = 2
-    col.active_border = rgba(7a49f5ff) rgba(39bae6ff) 45deg
+    col.active_border = rgba(597bc0ff) rgba(da72a2ff) 45deg
     col.inactive_border = rgba(409fff4d) rgba(93cee9cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(7a49f5ff) rgba(39bae6ff) 45deg
+    col.border_active = rgba(597bc0ff) rgba(da72a2ff) 45deg
     col.border_inactive = rgba(409fff4d) rgba(93cee9cc) 45deg
-    col.border_locked_active = rrgba(7a49f5ff) rgba(39bae6ff) 45deg
+    col.border_locked_active = rgba(597bc0ff) rgba(da72a2ff) 45deg
     col.border_locked_inactive = rgba(409fff4d) rgba(93cee9cc) 45deg
 }
 
