--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,37 +1,37 @@
 # Created by https://github.com/decaycs
 
 # Special
-background #0b0e14
-foreground #fcfcfc
+background #060914
+foreground #a7a9b5
 
 # Black
 color0 #565b66
 color8 #626975
 
 # Red
-color1 #d95757
-color9 #f07178
+color1 #f47171
+color9 #f05c60
 
 # Green
-color5  #7fd962
-color13 #aad94c
+color5  #8cb67d
+color13 #80aa6e
 
 # Yellow
-color3  #ff8f40
-color3  #ffb454
+color3  #d6b476
+color3  #ba9a5e
 color11 
 
 # Blue
-color2  #39bae6
-color10 #59c2ff
+color2  #59c2ff
+color10 #597bc0
 
 # Magenta
-color5  #b165fe
-color13 #a37acc
+color5  #968ebe
+color13 #b4647f
 
 # Cyan
-color6  #73d0ff
-color14 #399ee6
+color6  #85c7b8
+color14 #7aa8a7
 
 # White
 color7  #cbced3
