--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -149,7 +149,7 @@
         "format": "{icon} {volume}",
         "rotate": 0,
         "format-muted": "婢",
-        "on-click": "pavucontrol-qt -t 3",
+        "on-click": "pavucontrol -t 3",
         "on-click-middle": "volumecontrol.sh -o m",
         "on-scroll-up": "volumecontrol.sh -o i",
         "on-scroll-down": "volumecontrol.sh -o d",
@@ -171,7 +171,7 @@
         "rotate": 0,
         "format-source": "",
         "format-source-muted": "",
-        "on-click": "pavucontrol-qt -t 4",
+        "on-click": "pavucontrol -t 4",
         "on-click-middle": "volumecontrol.sh -i m",
         "on-scroll-up": "volumecontrol.sh -i i",
         "on-scroll-down": "volumecontrol.sh -i d",
