--- a/.config/waybar/modules/pulseaudio.jsonc
+++ b/.config/waybar/modules/pulseaudio.jsonc
@@ -2,7 +2,7 @@
         "format": "{icon} {volume}",
         "rotate": ${r_deg},
         "format-muted": "婢",
-        "on-click": "pavucontrol-qt -t 3",
+        "on-click": "pavucontrol -t 3",
         "on-click-middle": "volumecontrol.sh -o m",
         "on-scroll-up": "volumecontrol.sh -o i",
         "on-scroll-down": "volumecontrol.sh -o d",
@@ -24,7 +24,7 @@
         "rotate": ${r_deg},
         "format-source": "",
         "format-source-muted": "",
-        "on-click": "pavucontrol-qt -t 4",
+        "on-click": "pavucontrol -t 4",
         "on-click-middle": "volumecontrol.sh -i m",
         "on-scroll-up": "volumecontrol.sh -i i",
         "on-scroll-down": "volumecontrol.sh -i d",
