minor hypr changes (hyprland)

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,7 +13,8 @@ $term = kitty
 $editor = code
 $file = thunar
 $browser = io.github.zen_browser.zen # zen browser
-$docker-term = kitty distrobox enter ros-test
+$ros1-term = kitty distrobox enter ros-test
+$ros2-term = kitty distrobox enter ros-humble
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -28,7 +29,8 @@ bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
 
 # Application shortcuts
 bind = $mainMod, Return, exec, $term # launch terminal emulator
-bind = $mainMod, T, exec, $docker-term
+bind = $mainMod, T, exec, $ros1-term # ROS1 docker
+bind = $mainMod+Ctrl, T, exec, $ros2-term # ROS2 docker
 bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, C, exec, $editor # launch text editor
 bind = $mainMod, F, exec, $browser # launch web browser
@@ -166,3 +168,9 @@ bind = $mainMod+Alt, 0, movetoworkspace, 10
 
 # Plugins
 bind = $mainMod, d, exec, pypr toggle term # Toggle Terminal Scratchpad
+
+# Setup the key binding
+bind = $mainMod, B, exec, pypr expose
+
+# Add some style to the "exposed" workspace
+workspace = special:exposed,border:true,shadow:false
