--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -1,6 +1,11 @@
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-dracula'
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Dracula'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+
+exec = hyprctl setcursor Dracula-cursors 25
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'Dracula-cursors'
+exec = gsettings set org.gnome.desktop.interface cursor-size 20
+
 
 general {
     gaps_in = 3
