--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -15,6 +15,7 @@ $file = thunar
 $browser = io.github.zen_browser.zen # zen browser
 $ros1-term = kitty distrobox enter ros-test
 $ros2-term = kitty distrobox enter ros-humble
+$config = code ~/dots
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -38,7 +39,7 @@ bind = Ctrl+Shift, Escape, exec, [centre;size 800 500;float] $scrPath/sysmonlaun
 
 # Rofi menus
 bind = $mainMod, A, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
-bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
+# bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
 
 # bind = $mainMod, Tab, exec, ags -t overview
 # bind = $mainMod, a , exec, ags -t overview
@@ -102,13 +103,6 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 bind = $mainMod, Escape, workspace, previous
 
-# Switch workspaces to a relative workspace
-bind = $mainMod+Ctrl, Right, workspace, r+1
-bind = $mainMod+Ctrl, Left, workspace, r-1
-
-# Move to the first empty workspace
-bind = $mainMod+Ctrl, Down, workspace, empty 
-
 # Resize windows
 binde = $mainMod+Shift, Right, resizeactive, 30 0
 binde = $mainMod+Shift, Left, resizeactive, -30 0
@@ -132,10 +126,10 @@ bind = $mainMod+Ctrl+Alt, Right, movetoworkspace, r+1
 bind = $mainMod+Ctrl+Alt, Left, movetoworkspace, r-1
 
 # Move focused window around the current workspace
-bind = $mainMod+Shift, Left, movewindow, l
-bind = $mainMod+Shift, Right, movewindow, r
-bind = $mainMod+Shift, Up, movewindow, u
-bind = $mainMod+Shift, Down, movewindow, d
+bind = $mainMod+Ctrl, Left, movewindow, l
+bind = $mainMod+Ctrl, Right, movewindow, r
+bind = $mainMod+Ctrl, Up, movewindow, u
+bind = $mainMod+Ctrl, Down, movewindow, d
 
 # Scroll through existing workspaces
 bind = $mainMod, mouse_down, workspace, e+1
@@ -169,8 +163,47 @@ bind = $mainMod+Alt, 0, movetoworkspace, 10
 # Plugins
 bind = $mainMod, d, exec, pypr toggle term # Toggle Terminal Scratchpad
 
-# Setup the key binding
-bind = $mainMod, B, exec, pypr expose
+# Setup the config  keybinding
+bind = $mainMod+Shift, C, exec, $config # launch config file 
 
-# Add some style to the "exposed" workspace
-workspace = special:exposed,border:true,shadow:false
+
+$key = TAB
+$modifier = ALT
+$modifier_release = ALT_L
+$reverse = SHIFT
+
+# allows repeated switching with same keypress that starts the submap
+binde = $modifier, $key, exec, hyprswitch gui --do-initial-execute
+bind = $modifier, $key, submap, switch
+
+# allows repeated switching with same keypress that starts the submap
+binde = $modifier $reverse, $key, exec, hyprswitch gui --do-initial-execute -r
+bind = $modifier $reverse, $key, submap, switch
+
+submap = switch
+# allow repeated window switching in submap (same keys as repeating while starting)
+binde = $modifier, $key, exec, hyprswitch gui
+binde = $modifier $reverse, $key, exec, hyprswitch gui -r
+
+# switch to specific window offset (TODO replace with a more dynamic solution)
+bind = $modifier, 1, exec, hyprswitch gui --offset=1
+bind = $modifier, 2, exec, hyprswitch gui --offset=2
+bind = $modifier, 3, exec, hyprswitch gui --offset=3
+bind = $modifier, 4, exec, hyprswitch gui --offset=4
+bind = $modifier, 5, exec, hyprswitch gui --offset=5
+
+bind = $modifier $reverse, 1, exec, hyprswitch gui --offset=1 -r
+bind = $modifier $reverse, 2, exec, hyprswitch gui --offset=2 -r
+bind = $modifier $reverse, 3, exec, hyprswitch gui --offset=3 -r
+bind = $modifier $reverse, 4, exec, hyprswitch gui --offset=4 -r
+bind = $modifier $reverse, 5, exec, hyprswitch gui --offset=5 -r
+
+
+# exit submap and stop hyprswitch
+bindrt = $modifier, $modifier_release, exec, hyprswitch close
+bindrt = $modifier, $modifier_release, submap, reset
+
+# if it somehow doesn't close on releasing $switch_release, escape can kill (doesnt switch)
+bindr = ,escape, exec, hyprswitch close --kill
+bindr = ,escape, submap, reset
+submap = reset
