--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ exec-once = $scrPath/batterynotify.sh # battery notification
 # exec-once = ags -c ~/.config/ags/config_overviewOnly.
 exec-once = hyprm reload -n # Start Hyprland default plugins
 exec-once = /usr/bin/pypr # Start Pyprland for extra plugins
+exec-once = hyprswitch init --custom-css /home/radtop/.config/hyprswitch/hyprswitch.css & # Window Switcher Daemon
 exec-once = hypridle #Idle Daemon
 # exec-once = hyprshade auto
 
@@ -87,7 +88,6 @@ input {
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing
 
 # See https://wiki.hyprland.org/Configuring/Variables/
-
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
@@ -119,8 +119,8 @@ master {
 
 misc {
     vrr = 0
-    disable_hyprland_logo = false
-    disable_splash_rendering = false
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
     force_default_wallpaper = 0
 }
 
