lots of changes its been a while

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -11,11 +11,14 @@ $mainMod = Super # super / meta / windows key
 # Assign apps
 $term = kitty
 $editor = code
-$file = thunar
-$browser = io.github.zen_browser.zen # zen browser
+$file = dolphin 
+$browser = zen-browser# zen browser
 $ros1-term = kitty distrobox enter ros-test
-$ros2-term = kitty distrobox enter ros-humble
-$config = code ~/dots
+$ros2-term = kitty distrobox enter humble 
+$config = kitty nvim ~/dots
+$wifi-command = nmcli device wifi connect dhruv && notify-send "Connected to your personal hotspot" # connect to my personal hotspot
+$bluetooth-command = bluetoothctl connect AC:80:0A:7D:80:AB
+
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -207,3 +210,9 @@ bindrt = $modifier, $modifier_release, submap, reset
 bindr = ,escape, exec, hyprswitch close --kill
 bindr = ,escape, submap, reset
 submap = reset
+
+# Connect to my personal wifi
+bind = $mainMod+Ctrl, W, exec, $wifi-command
+
+# Connect to my Headphones
+bind = $mainMod+Ctrl, B, exec, $bluetooth-command
