--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 11.0
-window_padding_width 3 3 3 3
+window_padding_width 3 3 3 1
 include theme.conf
 background_opacity 0.80
 cursor_shape beam
@@ -19,4 +19,4 @@ selection_background none
 
 #hide_window_decorations yes
 confirm_os_window_close 0
-
+cursor_trail 1
