--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $scrPath = $HOME/.local/share/bin # set scripts path
 
 
 monitor = eDP-1,preferred,auto,1
-monitor = HDMI-A-1,1920x1080,auto,1
+monitor = HDMI-A-1,preferred,auto,1
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -102,7 +102,7 @@ gestures {
 dwindle {
     pseudotile = yes
     preserve_split = yes
-    no_gaps_when_only = 2
+    # no_gaps_when_only = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
