--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -11,8 +11,10 @@ windowrulev2 = opacity 0.80 0.80,class:^(Code)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
 # windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
-windowrulev2 = workspace 3,class:^(gazebo)$
-windowrulev2 = workspace 3,class:^(rviz)$
+windowrulev2 = workspace 3 silent,class:^(gazebo)$
+windowrulev2 = workspace 3 silent,class:^(Gazebo GUI)$
+windowrulev2 = workspace 3 silent,class:^(rviz)$
+windowrulev2 = workspace 3 silent,class:^(rviz2)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
