--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,9 +43,9 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 # exec-once = ags -c ~/.config/ags/config_overviewOnly.
-exec-once = hyprm reload -n # Start Hyprland default plugins
+exec-once =  hyprpm reload -n # Start Hyprland default plugins
 exec-once = /usr/bin/pypr # Start Pyprland for extra plugins
-exec-once = hyprswitch init --custom-css /home/radtop/.config/hyprswitch/hyprswitch.css & # Window Switcher Daemon
+# exec-once = hyprswitch init --custom-css /home/radtop/.config/hyprswitch/hyprswitch.css & # Window Switcher Daemon
 exec-once = hypridle #Idle Daemon
 # exec-once = hyprshade auto
 
@@ -146,4 +146,3 @@ source = ~/.config/hypr/userprefs.conf # initially empty, to be configured by us
 # source = ~/.config/hypr/hyprland/general.conf
 # Note: as userprefs.conf is sourced at the end, settings configured in this file will override the defaults
 # source = ~/.config/hypr/nvidia.conf # auto sourced vars for nvidia
-
