--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -26,7 +26,7 @@ bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, W, togglefloating, # toggle the window between focus and float
 bind = $mainMod, G, togglegroup, # toggle the window between focus and group
 bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
-bind = $mainMod, L, exec, swaylock # launch lock screen
+bind = $mainMod+Shift, L, exec, swaylock # launch lock screen
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
@@ -93,6 +93,12 @@ bind = $mainMod, Up, movefocus, u
 bind = $mainMod, Down, movefocus, d
 bind = Alt, Tab, movefocus, d
 
+# Use Vim keys to move around windows
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, k, movefocus, r
+bind = $mainMod, j, movefocus, u
+bind = $mainMod, l, movefocus, d
+
 # Switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -149,7 +155,7 @@ bind = $mainMod+Shift, S, movetoworkspacesilent, special
 bind = $mainMod, S, togglespecialworkspace,
 
 # Toggle focused window split
-bind = $mainMod, J, togglesplit
+bind = $mainMod, i, togglesplit
 
 # Move focused window to a workspace silently
 bind = $mainMod+Alt, 1, movetoworkspace, 1
@@ -170,46 +176,46 @@ bind = $mainMod, d, exec, pypr toggle term # Toggle Terminal Scratchpad
 bind = $mainMod+Shift, C, exec, $config # launch config file 
 
 
-$key = TAB
-$modifier = ALT
-$modifier_release = ALT_L
-$reverse = SHIFT
-
-# allows repeated switching with same keypress that starts the submap
-binde = $modifier, $key, exec, hyprswitch gui --do-initial-execute
-bind = $modifier, $key, submap, switch
-
-# allows repeated switching with same keypress that starts the submap
-binde = $modifier $reverse, $key, exec, hyprswitch gui --do-initial-execute -r
-bind = $modifier $reverse, $key, submap, switch
-
-submap = switch
-# allow repeated window switching in submap (same keys as repeating while starting)
-binde = $modifier, $key, exec, hyprswitch gui
-binde = $modifier $reverse, $key, exec, hyprswitch gui -r
-
-# switch to specific window offset (TODO replace with a more dynamic solution)
-bind = $modifier, 1, exec, hyprswitch gui --offset=1
-bind = $modifier, 2, exec, hyprswitch gui --offset=2
-bind = $modifier, 3, exec, hyprswitch gui --offset=3
-bind = $modifier, 4, exec, hyprswitch gui --offset=4
-bind = $modifier, 5, exec, hyprswitch gui --offset=5
-
-bind = $modifier $reverse, 1, exec, hyprswitch gui --offset=1 -r
-bind = $modifier $reverse, 2, exec, hyprswitch gui --offset=2 -r
-bind = $modifier $reverse, 3, exec, hyprswitch gui --offset=3 -r
-bind = $modifier $reverse, 4, exec, hyprswitch gui --offset=4 -r
-bind = $modifier $reverse, 5, exec, hyprswitch gui --offset=5 -r
-
-
-# exit submap and stop hyprswitch
-bindrt = $modifier, $modifier_release, exec, hyprswitch close
-bindrt = $modifier, $modifier_release, submap, reset
-
-# if it somehow doesn't close on releasing $switch_release, escape can kill (doesnt switch)
-bindr = ,escape, exec, hyprswitch close --kill
-bindr = ,escape, submap, reset
-submap = reset
+# $key = TAB
+# $modifier = ALT
+# $modifier_release = ALT_L
+# $reverse = SHIFT
+#
+# # allows repeated switching with same keypress that starts the submap
+# # binde = $modifier, $key, exec, hyprswitch gui --do-initial-execute
+# bind = $modifier, $key, submap, switch
+#
+# # allows repeated switching with same keypress that starts the submap
+# binde = $modifier $reverse, $key, exec, hyprswitch gui --do-initial-execute -r
+# bind = $modifier $reverse, $key, submap, switch
+#
+# submap = switch
+# # allow repeated window switching in submap (same keys as repeating while starting)
+# binde = $modifier, $key, exec, hyprswitch gui
+# binde = $modifier $reverse, $key, exec, hyprswitch gui -r
+#
+# # switch to specific window offset (TODO replace with a more dynamic solution)
+# bind = $modifier, 1, exec, hyprswitch gui --offset=1
+# bind = $modifier, 2, exec, hyprswitch gui --offset=2
+# bind = $modifier, 3, exec, hyprswitch gui --offset=3
+# bind = $modifier, 4, exec, hyprswitch gui --offset=4
+# bind = $modifier, 5, exec, hyprswitch gui --offset=5
+#
+# bind = $modifier $reverse, 1, exec, hyprswitch gui --offset=1 -r
+# bind = $modifier $reverse, 2, exec, hyprswitch gui --offset=2 -r
+# bind = $modifier $reverse, 3, exec, hyprswitch gui --offset=3 -r
+# bind = $modifier $reverse, 4, exec, hyprswitch gui --offset=4 -r
+# bind = $modifier $reverse, 5, exec, hyprswitch gui --offset=5 -r
+#
+#
+# # exit submap and stop hyprswitch
+# bindrt = $modifier, $modifier_release, exec, hyprswitch close
+# bindrt = $modifier, $modifier_release, submap, reset
+#
+# # if it somehow doesn't close on releasing $switch_release, escape can kill (doesnt switch)
+# bindr = ,escape, exec, hyprswitch close --kill
+# bindr = ,escape, submap, reset
+# submap = reset
 
 # Connect to my personal wifi
 bind = $mainMod+Ctrl, W, exec, $wifi-command
