--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -80,6 +80,8 @@ windowrulev2 = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
 windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
 windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 
+# windowrulev2 = plugin:chromakey,fullscreen:0
+# chromakey_background = 7,8,17
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
