--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,32 +1,39 @@
-# font_family      FiraCode Nerd Font Mono
+include hyde.conf
+font_family      FiraCode Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
 
-font_size 12.0
+font_size 15.0
 window_padding_width 1 3 2 1
 include theme.conf
-background_opacity 0.80
-cursor_shape beam
-cursor  none
+background_opacity 0.90
+# background_opacity 1.0
+background_blur 1
+# cursor_shape beam
+# cursor  none
 scrollback_lines -1
 scrollback_fill_enlarged_window yes
 mouse_hide_wait -1
 
 scrollback_pager_history_size 4096
+# selection_background none
+# selection_background none
 
-selection_background none
-selection_background none
-
-#hide_window_decorations yes
+hide_window_decorations no
 confirm_os_window_close 0
 cursor_trail 1
-
 # BEGIN_KITTY_FONTS
-font_family family="FiraCode Nerd Font Mono"
-bold_font auto
-italic_font auto
-bold_italic_font auto
+#font_family family="FiraCode Nerd Font"
+#bold_font auto
+#italic_font auto
+#bold_italic_font auto
 
-shell /usr/bin/zellij 
+shell /usr/bin/zellij
 # END_KITTY_FONTS
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Material Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
