--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -7,9 +7,9 @@ cursor #C5C9C7
 cursor_text_color #090E13
 
 # Tabs
-active_tab_background #090E13
+active_tab_background #000000
 active_tab_foreground #C5C9C7
-inactive_tab_background  #090E13
+inactive_tab_background  #000000
 inactive_tab_foreground #A4A7A4
 
 # normal
