color and layout changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,13 +21,11 @@ mouse_hide_wait 2.0
 copy_on_select yes
 strip_trailing_spaces smart
 focus_follows_mouse yes
-enabled_layouts tall, splits, stack
+enabled_layouts *
 draw_minimal_borders no
 
 window_margin_width 2
 window_padding_width 2
-active_border_color #82edde
-inactive_border_color #809c98
 inactive_text_alpha 0.9
 hide_window_decorations yes
 
