current best working kitty config with tabs data and time

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -3,7 +3,7 @@ foreground #C5C9C7
 selection_background #393B42
 selection_foreground #C5C9C7
 url_color #72A7BC
-cursor #C5C9C7
+# cursor #C5C9C7
 cursor_text_color #090E13
 
 # Tabs
