--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,3 @@
-
 font_family      CaskaydiaCove Nerd Font 
 font_size 10.0
 undercurl_style thick-dense
@@ -29,14 +28,11 @@ window_padding_width 2
 inactive_text_alpha 0.9
 hide_window_decorations yes
 
-tab_bar_edge top
-tab_bar_style custom
-tab_bar_align center
-tab_activity_symbol 󱞈
-tab_title_template "{fmt.fg.blue}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{title}"
+# tab_title_template "{fmt.fg.blue}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{index}: {title}"
 
 background_opacity 0.8
 background_blur 0
 
 include keybinds.conf
+include tab_bar.conf
 include current-theme.conf
