--- a/.config/kitty/tab_bar.conf
+++ b/.config/kitty/tab_bar.conf
@@ -18,11 +18,11 @@ tab_fade                        0 0 0 0
 tab_title_template              "{fmt.fg._415c6d}{fmt.bg.default}  {index}:{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}{' []' if layout_name == 'stack' else ''} "
 active_tab_title_template       "{fmt.fg._83b6af}{fmt.bg.default}  {index}:{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}{' []' if layout_name == 'stack' else ''} "
 tab_bar_edge                    top
-tab_bar_align                   left
+tab_bar_align                   center
 tab_bar_margin_width            0.0
-tab_bar_margin_height           10.0 0.0
+tab_bar_margin_height           5.0 0.0
 active_tab_font_style           bold-italic
 inactive_tab_font_style         normal
-tab_bar_min_tabs                2
-tab_activity_symbol             none
+tab_bar_min_tabs                1
+# tab_activity_symbol             none
 bell_on_tab                     no
