[kitty] stable config, with almmost everything i need
need to add embedded panes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,10 +28,10 @@ window_padding_width 2
 inactive_text_alpha 0.9
 hide_window_decorations yes
 
-# tab_title_template "{fmt.fg.blue}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{index}: {title}"
 
 background_opacity 0.8
 background_blur 0
+confirm_os_window_close 0
 
 include keybinds.conf
 include tab_bar.conf
