--- a/.config/kitty/tab_bar.conf
+++ b/.config/kitty/tab_bar.conf
@@ -1,22 +1,8 @@
-#
-# tab_bar_edge top
-# tab_bar_margin_height 5.0 5.0
-# tab_bar_style custom
-# tab_powerline_style round
-# #tab_bar_background #003747
-# #tab_title_template "{fmt.fg.default}{index}"
-# active_tab_foreground #FFFFFF
-# inactive_tab_foreground #888888
-# active_tab_background #458588
-# #inactive_tab_background #1e1e2e
-# #tab_bar_margin_color #1e1e2e
-# tab_title_template "{index}: {title}"
 tab_bar_style                   custom
 tab_separator                   ""
-# REF: https://github.com/kovidgoyal/kitty/discussions/4447
 tab_fade                        0 0 0 0
-tab_title_template              "{fmt.fg._415c6d}{fmt.bg.default}  {index}:{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}{' []' if layout_name == 'stack' else ''} "
-active_tab_title_template       "{fmt.fg._83b6af}{fmt.bg.default}  {index}:{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}{' []' if layout_name == 'stack' else ''} "
+tab_title_template              "{fmt.fg._415c6d}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '} {index}: {f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title} "
+active_tab_title_template       "{fmt.fg._83b6af}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '} {index}: {f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title} "
 tab_bar_edge                    top
 tab_bar_align                   center
 tab_bar_margin_width            0.0
@@ -24,5 +10,4 @@ tab_bar_margin_height           5.0 0.0
 active_tab_font_style           bold-italic
 inactive_tab_font_style         normal
 tab_bar_min_tabs                1
-# tab_activity_symbol             none
 bell_on_tab                     no
