--- a/.config/kitty/keybinds.conf
+++ b/.config/kitty/keybinds.conf
@@ -1,7 +1,7 @@
 # Zellij-style keybinds for Kitty
 
 # Pane/Window Management
-map alt+n new_window
+map alt+n new_window_with_cwd
 map alt+q close_window
 map alt+minus launch --location=hsplit --cwd=current
 map alt+shift+backslash launch --location=vsplit --cwd=current
@@ -17,6 +17,7 @@ map alt+shift+left resize_window narrower 2
 map alt+shift+right resize_window wider 2
 map alt+shift+up resize_window taller 2
 map alt+shift+down resize_window shorter 2
+map alt+shift+home resize_window reset
 
 # Scroll up/down in current window
 map alt+shift+k scroll_line_up
