--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,13 +20,14 @@ mouse_hide_wait 2.0
 copy_on_select yes
 strip_trailing_spaces smart
 focus_follows_mouse yes
-enabled_layouts *
-draw_minimal_borders no
+enabled_layouts tall ,splits, grid, fat, stack
+draw_minimal_borders yes
 
 window_margin_width 2
 window_padding_width 2
 inactive_text_alpha 0.9
 hide_window_decorations yes
+allow_remote_control yes
 
 
 background_opacity 0.8
