--- a/.config/kitty/tab_bar.conf
+++ b/.config/kitty/tab_bar.conf
@@ -1,8 +1,8 @@
 tab_bar_style                   custom
 tab_separator                   ""
 tab_fade                        0 0 0 0
-tab_title_template              "{fmt.fg._415c6d}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '} {index}: {f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title} "
-active_tab_title_template       "{fmt.fg._83b6af}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '} {index}: {f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title} "
+tab_title_template              "{fmt.fg._415c6d}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '}{index}:[{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}] "
+active_tab_title_template       "{fmt.fg._83b6af}{fmt.bg.default} {' ' if layout_name == 'stack' else ' '}{index}:[{f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 25 else title}]"
 tab_bar_edge                    top
 tab_bar_align                   center
 tab_bar_margin_width            0.0
